<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">新闻听听看</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_iat_demo">IatDemoActivity</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">请开始说话&#8230;</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="text_upload_success">上传成功</string>
    <string name="app_id">537db7f3</string>
    <string name="blank"></string>
    <string name="begin">开始</string>
    <string name="stop">播放</string>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="pause">暂停</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="nowversion">V1.0</string>
    <string name="about2">sse.tongji.edu.cn, All Rights Reserved</string>
    <string name="about1">Copyright © 2014&#8211;2016</string>
    <string name="title_activity_version_info">VersionInfoActivity</string>
    <string name="title_activity_user_helper">UserHelperActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-9092526227073357/6396162024</string>

</resources>