<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:background="@color/title_color"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <Button
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="今日头条"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/mode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:text="语音模式"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="5"
            android:gravity="center"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/setting"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_gravity="center"
            android:layout_margin="6dip"
            android:background="@drawable/main_setting_btn_np"
            android:contentDescription="@string/blank" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginEnd="0dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/iat_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:editable="false"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/blank"
                android:paddingBottom="10dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="20sp" >

                <requestFocus />
            </EditText>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pause"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1.5"
            android:background="@drawable/pic"
            android:src="@drawable/pic" />

        <Button
            android:id="@+id/iat_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>